--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -520,11 +520,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive Predictor on validation data: \n",
+      "     Accuracy score: 0.2478 \n",
+      "     Precision: 0.2478 \n",
+      "     Recall: 1.0000 \n",
+      "     F-score: 0.2917\n"
+     ]
+    }
+   ],
    "source": [
     "#不能使用scikit-learn，你需要根据公式自己实现相关计算。\n",
     "\n",
@@ -532,7 +542,7 @@
     "accuracy = (1.0*n_greater_50k)/n_records\n",
     "\n",
     "# 计算查准率 Precision\n",
-    "precision = (1.0*n_greater_50k)/（）\n",
+    "precision = (1.0*n_greater_50k)/(n_greater_50k + n_at_most_50k)\n",
     "\n",
     "# TODO： 计算查全率 Recall\n",
     "recall = 1\n",
